fixed pacman align

--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,9 @@
   border-radius: 20%;
 }
 
-.loading {
-  display: flex !important;
-  flex-direction: column !important;
-  align-items: center !important;
-  justify-content: center !important;
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
